<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_16"
    android:paddingTop="@dimen/padding_16"
    android:paddingEnd="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_36"
            android:layout_marginBottom="@dimen/margin_4"
            android:background="@color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_32"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/person_id_text" />

            <TextView
                android:id="@+id/personId"
                style="@style/StaffTextStyle"
                android:layout_weight="2"
                android:textAppearance="?android:textAppearanceSmall"
                tools:hint="@string/staff_id" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:background="@color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_32"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/first_name" />

            <TextView
                android:id="@+id/firstName"
                style="@style/StaffTextStyle"
                android:layout_weight="2"
                android:textAppearance="?android:textAppearanceSmall"
                tools:hint="@string/first_name_text" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:background="@color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_32"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/last_name" />

            <TextView
                android:id="@+id/lastName"
                style="@style/StaffTextStyle"
                android:layout_weight="2"
                android:textAppearance="?android:textAppearanceSmall"
                tools:hint="@string/last_name_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_4"
            android:background="@color/darker_gray" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:gravity="center_vertical"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_people_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
