<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/padding_16"
    android:paddingTop="@dimen/padding_16"
    android:paddingRight="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16"
    tools:context=".view.fragment.people.AddStaffFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        style="@style/InputLayoutStyle"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        style="@style/InputLayoutStyle"
        android:layout_marginTop="@dimen/margin_8"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/firstName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/margin_48"
        app:backgroundTint="@color/colorAccent"
        android:text="@string/save"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/firstName"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/lastName" />


</androidx.constraintlayout.widget.ConstraintLayout>
